<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_color"
    android:paddingTop="20dp"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:padding="8dp"
        android:src="@drawable/imdb"
        android:textColor="@color/page_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/search_view"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_search"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/book_marks"/>

    <ImageView
        android:id="@+id/book_marks"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/un_bookmark"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/home_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            tools:context=".ui.home.HomeFragment">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/now_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/now_playing"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/now_playing_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/now_playing" />

                <TextView
                    android:id="@+id/popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/trending"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/now_playing_recyclerview" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:clipToPadding="false"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popular" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <RelativeLayout
        android:id="@+id/no_results_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/empty_icon"
            android:layout_width="100dp"
            android:alpha="0.5"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_search"/>
        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:alpha="0.5"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below="@+id/empty_icon"
            android:text="@string/some_error_occured"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/page_color"
            android:textSize="20sp"
            android:text="@string/retry"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/empty_text"
            android:textStyle="bold"
            android:background="@color/secondaryColor"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
